# swaybar-data

./: .gitignore  Cargo.toml  README.md  example_config.toml
.github/workflows/: build-and-test.yml
scripts/: generate-dbus-bindings.sh
src/: config.rs  dbusdata.rs  error.rs  main.rs  output.rs  timestamp.rs
src/dbusdata/: battery.rs  mod.rs  network.rs
